<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F8FB">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_icon"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/ic_icon1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="29dp"
        android:text="@string/tips_water"
        android:textColor="#1C274C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center|start"
        android:paddingHorizontal="29dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/tips_water_2"
        android:textColor="#625D5D"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/iv_continue"
        android:layout_width="246dp"
        android:layout_height="56dp"
        android:layout_marginBottom="69dp"
        android:background="@drawable/bg_btn1"
        android:gravity="center"
        android:text="@string/alright_let_s_continue"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>