<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F8FB">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/tv_setting"
        app:layout_constraintLeft_toLeftOf="@id/tv_setting"
        app:layout_constraintTop_toTopOf="@id/tv_setting" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_setting"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="#1C274C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_welcom_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_setting" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/bg_setting_item"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/iv">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_reminders"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:drawableEnd="@drawable/ic_next"
            android:gravity="center|start"
            android:paddingHorizontal="20dp"
            android:text="@string/reminders"
            android:textColor="#1C274C"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DAE5EC" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_gw"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:drawableEnd="@drawable/ic_next"
            android:gravity="center|start"
            android:paddingHorizontal="20dp"
            android:text="@string/gender_weight"
            android:textColor="#1C274C"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DAE5EC" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pri"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:drawableEnd="@drawable/ic_next"
            android:gravity="center|start"
            android:paddingHorizontal="20dp"
            android:text="@string/privacy_policy"
            android:textColor="#1C274C"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>