<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="308dp"
        android:layout_height="217dp"
        android:layout_gravity="center"
        android:paddingHorizontal="22dp"
        android:background="@drawable/bg_dialog">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/add_your_goal"
            android:textColor="#1C274C"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#F7F7F7"
            app:layout_constraintBottom_toTopOf="@id/tv_cancel" />

        <View
            android:id="@+id/view_div"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="#F7F7F7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_cancel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cancel"
            android:layout_width="127dp"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#C2C2C2"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_confirm"
            android:layout_width="127dp"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#4AA8F6"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="33dp"
            android:background="@color/white"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="6"
            android:minWidth="103dp"
            android:text="2000"
            android:textColor="#FF9A34"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#FF9A34"
            app:layout_constraintLeft_toLeftOf="@id/et_input"
            app:layout_constraintRight_toRightOf="@id/et_input"
            app:layout_constraintTop_toBottomOf="@id/et_input" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="ml"
            android:textColor="#757B90"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/et_input"
            app:layout_constraintLeft_toRightOf="@id/et_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>