<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F8FB"
    tools:context=".home.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/app_name"
        android:textColor="#1C274C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_setting"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/ic_set"
        app:layout_constraintBottom_toBottomOf="@id/tv_app_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_app_name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_2"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/ic_home_btn2"
        app:layout_constraintBottom_toBottomOf="@id/tv_app_name"
        app:layout_constraintRight_toLeftOf="@id/iv_setting"
        app:layout_constraintTop_toTopOf="@id/tv_app_name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_1"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/ic_home_btn1"
        app:layout_constraintBottom_toBottomOf="@id/tv_app_name"
        app:layout_constraintRight_toLeftOf="@id/iv_2"
        app:layout_constraintTop_toTopOf="@id/tv_app_name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_water"
        android:layout_width="296dp"
        android:layout_height="296dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/ic_home_icon2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/today_s_goal"
        android:textColor="#656D88"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_water" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_today_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:text="2000ml"
        android:textColor="#1C274C"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_today"
        app:layout_constraintLeft_toRightOf="@id/tv_today"
        app:layout_constraintTop_toTopOf="@id/tv_today" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_edit"
        android:layout_width="17dp"
        android:layout_height="14dp"
        android:layout_marginHorizontal="6dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@id/tv_today_all"
        app:layout_constraintLeft_toRightOf="@id/tv_today_all"
        app:layout_constraintTop_toTopOf="@id/tv_today_all" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_pro_bg"
        android:layout_width="0dp"
        android:layout_height="12dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/bg_white_20"
        app:layout_constraintBottom_toBottomOf="@id/progress_horizontal"
        app:layout_constraintLeft_toLeftOf="@id/tv_today"
        app:layout_constraintRight_toLeftOf="@id/tv_progress"
        app:layout_constraintTop_toTopOf="@id/progress_horizontal" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_horizontal"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginHorizontal="3dp"
        android:layout_marginTop="10dp"
        app:indicatorColor="#FF9A34"
        app:layout_constraintLeft_toLeftOf="@id/tv_today"
        app:layout_constraintRight_toRightOf="@id/iv_pro_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_today"
        app:trackColor="#E1E8EE"
        app:trackCornerRadius="20dp"
        tools:progress="10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="54%"
        android:textColor="#FF9A34"
        android:layout_marginHorizontal="28dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/progress_horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/progress_horizontal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_add_drink"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="93dp"
        android:background="@drawable/bg_btn2"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:text="+Drink 200ml"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_pro_bg" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bg_edit"
        android:layout_width="81dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/bg_btn3"
        app:layout_constraintLeft_toRightOf="@id/btn_add_drink"
        app:layout_constraintTop_toTopOf="@id/btn_add_drink" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_edit"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="#66BFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@id/iv_bg_edit"
        app:layout_constraintTop_toTopOf="@id/btn_add_drink" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_wa"
        android:layout_width="19dp"
        android:layout_height="25dp"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/ic_home_icon"
        app:layout_constraintBottom_toBottomOf="@id/iv_bg_edit"
        app:layout_constraintRight_toLeftOf="@id/tv_edit"
        app:layout_constraintTop_toTopOf="@id/iv_bg_edit" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_drink_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingHorizontal="36dp"
        android:text="@string/drink_water_tips_1"
        android:textColor="#B5BCD0"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_add_drink" />

</androidx.constraintlayout.widget.ConstraintLayout>